# ECS-Test

./: CMakeLists.txt  FetchDependencies.cmake  LICENSE  README.md
include/: s1mpleEngine.h
include/ecs/: system.h
include/glad/: glad.h
include/s1e/: s1mpleEngine.h
include/s1e/ecs/: component.h  entity.h  misc.h  system.h  world.h
script/: build.sh  deps.sh  run.sh
src/: glad.c  s1mpleEngine.cpp
src/ecs/: component.cpp  entity.cpp  misc.cpp  system.cpp  world.cpp
test/: CMakeLists.txt  ecs.cpp  hello.cpp
